更新游戏功能：优化游戏界面、添加新地图选择界面、完善登录系统

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>双锋对决</title>
         <link rel = "stylesheet" href = "styles/cover.css"/>
+        <link rel = "icon" href = "favicon.ico" type = "image/x-icon" />
         <meta  charset="utf-16" />
     </head>
     <body>
