--- a/pages/leaderboard.html
+++ b/pages/leaderboard.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>双锋对决 - 排行榜</title>
+    <link rel = "icon" href = "../favicon.ico" type = "image/x-icon" />
     <link rel="stylesheet" href="../styles/new.css">
     <style>
         body {
